dataset1235/2025-2/805158916/users/3305581491/executions/2651470117_1927446959.log
== RUN (2025-08-25 15:11:35)
-- CODE: 
n=float(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
print(round(n,2))
print(round(n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:53:40)
-- CODE: 
n=int(input("entre com o valor de n: "))
n*(27/100)
n*(42/100)
n*(63/100)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:02:25)
-- CODE: 
n=int(input("entre com o valor de n: "))
print((n,2(n*(27/100)))
print(n,2(n*(42/100)))
print(n,2(n*(63/100)))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    print((n,2(n*(27/100)))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    print((n,2(n*(27/100)))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    print((n,2(n*(27/100)))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    print((n,2(n*(27/100)))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    print((n,2(n*(27/100)))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    print((n,2(n*(27/100)))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:02:04)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(float(n,2(n*(27/100))))
print(float(n,2(n*(42/100))))
print(float(n,2(n*(63/100))))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:11:43)
-- CODE: 
n=float(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
print(round(n,2))
print(round(n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:02:32)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(n,2(n*(27/100)))
print(n,2(n*(42/100)))
print(n,2(n*(63/100)))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(27/100)))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(42/100)))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(63/100)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(27/100)))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(42/100)))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(63/100)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(27/100)))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(42/100)))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(63/100)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(27/100)))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(42/100)))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(63/100)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(27/100)))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(42/100)))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(63/100)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(27/100)))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(42/100)))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(n,2(n*(63/100)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:05:08)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:58:12)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(round(n,2(n*(27/100)))
print(round(n,2(n*(42/100)))
print(round(n,2(n*(63/100)))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:01:13)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
None
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
None
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
None
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
None
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
None
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:10:53)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
print(round(n,2))
print(round(n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:19:11)
-- CODE: 
n=float(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
print(round(n,2))
print(round(n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:07:38)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n*(27/100,2)))
print(round(n*(42/100,2)))
print(round(n*(63/100,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:58:15)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(round(n,2(n*(27/100)))
print(round(n,2(n*(42/100)))
print(round(n,2(n*(63/100)))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    print(round(n,2(n*(27/100)))
          ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:02:07)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(float(n,2(n*(27/100))))
print(float(n,2(n*(42/100))))
print(float(n,2(n*(63/100))))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:12:06)
-- CODE: 
n=float(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
print(round(n,2))
print(round(n,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:57:15)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(round(n,2(n*(27/100))))
print(round(n,2(n*(42/100))))
print(round(n,2(n*(63/100))))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(27/100))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(42/100))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(n,2(n*(63/100))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:25:04)
-- CODE: 
n=int(input("entre com o valor de n: "))
resultado1=round((n*(27/100)),2)
resultado2=round((n*(42/100)),2)
resultado3=round((n*(63/100)),2)
print(resultado1)
print(resultado2)
print(resultado3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:54:29)
-- CODE: 
n=int(input("entre com o valor de n: "))
prin(n*(27/100))
print(n*(42/100))
print(n*(63/100))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:32:38)
-- CODE: 
n=float(input("entre com o valor de n: "))
resultado1=round((n*(27/100)),2)
resultado2=round(n+(n*(42/100)),2)
resultado3=round(n-(n*(63/100)),2)
print(resultado1)
print(resultado2)
print(resultado3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:05:15)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:02:57)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(n*(27/100)
print(n*(42/100)
print(n*(63/100)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 2
    print(n*(27/100)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 2
    print(n*(27/100)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 2
    print(n*(27/100)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 2
    print(n*(27/100)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 2
    print(n*(27/100)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 2
    print(n*(27/100)
          ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:11:58)
-- CODE: 
n=float(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
print(round(n,2))
print(round(n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:01:19)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(float(round(n,2(n*(27/100)))))
print(float(round(n,2(n*(42/100)))))
print(float(round(n,2(n*(63/100)))))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:54:41)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:05:00)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:03:09)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:01:18)
-- CODE: 
n=int(input("entre com o valor de n: "))
print(float(round(n,2(n*(27/100)))))
print(float(round(n,2(n*(42/100)))))
print(float(round(n,2(n*(63/100)))))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '123.14'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.00'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '325.60'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3567.90'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5426.20'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(27/100)))))
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(42/100)))))
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(float(round(n,2(n*(63/100)))))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input("entre com o valor de n: "))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.15'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:11:49)
-- CODE: 
n=float(input("entre com o valor de n: "))
print(n*(27/100))
print(n*(42/100))
print(n*(63/100))
print(round(n,2))
print(round(n,2))
print(round(n,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
